@startuml Plats & Utilisateurs - Clean Architecture

skinparam packageStyle rectangle
skinparam classBackgroundColor #FAFAFA
skinparam classBorderColor #555555
skinparam arrowColor #333333
skinparam packageBorderColor #888888

title Architecture Clean - Composant Plats & Utilisateurs

package "api" #D6EAF8 {

    class PlatsUtilisateursApplication {
        +@ApplicationPath("/api")
        +@ApplicationScoped
        --
        +@Produces openPlatDbConnection()
        +@Produces openUtilisateurDbConnection()
    }

    class PlatResource {
        +@Path("/plats")
        --
        +getAllPlats()
        +getPlat(id)
        +createPlat(plat)
        +updatePlat(id, plat)
        +deletePlat(id)
    }

    class UtilisateurResource {
        +@Path("/utilisateurs")
        --
        +getAllUtilisateurs()
        +getUtilisateur(id)
        +createUtilisateur(u)
        +updateUtilisateur(id, u)
        +deleteUtilisateur(id)
    }
}

package "usecases" #D5F5E3 {

    class PlatService {
        -platRepo : PlatRepositoryInterface
    }

    class UtilisateurService {
        -utilisateurRepo : UtilisateurRepositoryInterface
    }
}

package "domain" #FEF9E7 {

    class Plat {
        -id : int
        -nom : String
        -description : String
        -prix : double
    }

    class Utilisateur {
        -id : int
        -nom : String
        -prenom : String
        -email : String
        -adresse : String
    }
}

package "repositories" #F9EBEA {

    interface PlatRepositoryInterface {
        +getPlat(id)
        +getAllPlats()
        +createPlat()
        +updatePlat()
        +deletePlat()
    }

    interface UtilisateurRepositoryInterface {
        +getUtilisateur(id)
        +getAllUtilisateurs()
        +createUtilisateur()
        +updateUtilisateur()
        +deleteUtilisateur()
    }
}

package "infrastructure" #E8DAEF {

    class PlatRepositoryMariadb {
        -dbConnection : Connection
    }

    class UtilisateurRepositoryMariadb {
        -dbConnection : Connection
    }
}

PlatResource --> PlatService
UtilisateurResource --> UtilisateurService

PlatService --> PlatRepositoryInterface
UtilisateurService --> UtilisateurRepositoryInterface

PlatRepositoryInterface <|.. PlatRepositoryMariadb
UtilisateurRepositoryInterface <|.. UtilisateurRepositoryMariadb

PlatsUtilisateursApplication ..> PlatRepositoryMariadb : @Produces
PlatsUtilisateursApplication ..> UtilisateurRepositoryMariadb : @Produces

@enduml
